3.5.0/_sources/gallery/mplot3d/wire3d.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/mplot3d/wire3d.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_mplot3d_wire3d.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_mplot3d_wire3d.py:


=================
3D wireframe plot
=================

A very basic demonstration of a wireframe plot.

.. GENERATED FROM PYTHON SOURCE LINES 8-23



.. image-sg:: /gallery/mplot3d/images/sphx_glr_wire3d_001.png
   :alt: wire3d
   :srcset: /gallery/mplot3d/images/sphx_glr_wire3d_001.png, /gallery/mplot3d/images/sphx_glr_wire3d_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. code-block:: default


    from mpl_toolkits.mplot3d import axes3d
    import matplotlib.pyplot as plt


    fig = plt.figure()
    ax = fig.add_subplot(projection='3d')

    # Grab some test data.
    X, Y, Z = axes3d.get_test_data(0.05)

    # Plot a basic wireframe.
    ax.plot_wireframe(X, Y, Z, rstride=10, cstride=10)

    plt.show()


.. _sphx_glr_download_gallery_mplot3d_wire3d.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: wire3d.py <wire3d.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: wire3d.ipynb <wire3d.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
